@@ -2,7 +2,7 @@ noinst_LTLIBRARIES = libps.la
 
 INCLUDES = -I$(top_srcdir)/Xprint -I$(top_srcdir)/cfb -I$(top_srcdir)/mfb
 
-AM_CFLAGS = @DIX_CFLAGS@ -D_XP_PRINT_SERVER_ -DPSZ=8 -DXP_PSTEXT
+AM_CFLAGS = @DIX_CFLAGS@ @XPRINT_CFLAGS@ -D_XP_PRINT_SERVER_ -DPSZ=8 -DXP_PSTEXT
 
 libps_la_SOURCES =		\
 	PsArc.c			\
