@@ -8,5 +8,5 @@ sdkdir=@sdkdir@
 Name: xorg-server
 Description: Modular X.Org X Server
 Version: @PACKAGE_VERSION@
+Cflags: -I${sdkdir} @MODULE_DEFINES@
 Libs: -L${libdir}
-Cflags: -I${sdkdir} -DIN_MODULE -DXFree86Module
